--- a/client/controlpanel/settings.html
+++ b/client/controlpanel/settings.html
@@ -65,7 +65,7 @@
                         <li><div id="Easter" class="EasterEgg">
                                 <div class="EasterEgg-content">
                                     <span class="close">&times;</span>
-                                    <img src="https://www.askideas.com/media/39/Yes-Human-Plant-For-Your-Rabbit-Overlords-Funny-Rabbit-Meme-Image.jpg" width="80%" height="80%">
+                                    <img src="https://www.askideas.com/media/39/Yes-Human-Plant-For-Your-Rabbit-Overlords-Funny-Rabbit-Meme-Image.jpg" width="80%" height="80%" alt="dank memes">
                                     <p style="color:white" >Its a feature :)</p>
                                 </div>
                             </div>
