--- a/client/controlpanel/dashboard.html
+++ b/client/controlpanel/dashboard.html
@@ -123,8 +123,9 @@ function doWork() {
                                         <ul class="nav innerMenu"><li>
                                             <button data-toggle="collapse" class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:13px;"></button><a href="#">Mystery Plant</a></li>
                                         </ul>
-                                    </ul>
-                            </li>
+                                </li>
+                            </ul>
+                        </li>
                         <!--End indoors dropdown-->
                         </ul>
                         <ul class="nav" id="groupsList"><!--Intial start of accordian-->
@@ -138,6 +139,11 @@ function doWork() {
                                         <ul class="nav innerMenu"><li><button id="setting_cog" class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:13px;"></button><a href="#"> Dead Twig</a></li>
                                         </ul>
 
+                            <ul id="menuDrop" class="dropdown-menu keep-open" role="menu">
+                                <li>
+                                    <ul class="nav innerMenu"><li><button class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:13px;">
+                                    </button><a href="#">&nbsp;Dead Twig</a></li></ul>
+                                </li>
 
                                 <li>
                                     <ul class="nav innerMenu"><li><button onclick="" class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:13px;">
@@ -146,7 +152,7 @@ function doWork() {
                             </ul>
                         </li>
                         <li class="dropdown keep-open" id="menuElement">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Watered Sidewalks<span class="caret" id="menu-caret"></span></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Watered Sidewalks<span class="caret"></span></a>
                             <ul id="menuDrop" class="dropdown-menu keep-open" role="menu">
                                 <!--Dank Weed-->
                                 <li>
@@ -177,9 +183,9 @@ function doWork() {
                                                         <div id="show_rename_plant" style="display: none;">
                                                             <br/>
                                                             <form action="/rename-plant" method="post"> <!--Idk the backend name-->
-                                                                <input type="hidden" value=username name="user" id="uname" />
-                                                                <input type="text" class="form-control" id="PlantName" name="groupName" placeholder="new plant name" />
-                                                                <button id="savebutton" type="submit" class="btn btn-success" onclick="addGroup()">Rename Plant</button>
+                                                                <input type="hidden" value=username name="user" id="uname1" />
+                                                                <input type="text" class="form-control" id="renameform1" name="groupName1" placeholder="new plant name" />
+                                                                <button id="renamebutton1" type="submit" class="btn btn-success" onclick="addGroup()">Rename Plant</button>
                                                             </form>
                                                         </div>
                                                     <br/>
@@ -187,9 +193,9 @@ function doWork() {
                                                         <div id="show_change_plant_group" style="display: none;">
                                                             <br/>
                                                             <form action="/change-group-plant" method="post"> <!--Idk the backend name-->
-                                                                <input type="hidden" value=username name="user" id="uname" />
-                                                                <input type="text" class="form-control" id="PlantName" name="groupName" placeholder="new plant name" />
-                                                                <button id="savebutton" type="submit" class="btn btn-success" onclick="addGroup()">Create Group</button>
+                                                                <input type="hidden" value=username name="user" id="uname2" />
+                                                                <input type="text" class="form-control" id="changegroupform1" name="groupName2" placeholder="new plant name" />
+                                                                <button id="changegroupbutton1" type="submit" class="btn btn-success" onclick="addGroup()">Create Group</button>
                                                             </form>
                                                         </div>
                                                     <br/>
@@ -200,8 +206,8 @@ function doWork() {
                                     </ul>
                                 </ul>
                             </li>
-                            <br/>
-                            <li style="font-size: 12px; float: right;"><a href="allgroups.html">Manage Groups</a></li>
+
+                            <li style="font-size: 12px; float: right;"><br/><a href="allgroups.html">Manage Groups</a></li>
                             <li class="plus" style="font-size: 13px; float: left;"><a onclick="showCreateGroup()"><span class="btn glyphicon glyphicon-plus"></span></a></li>
                         </ul>
                         <!--End indoors dropdown-->
