lint, y u do dis? Hopefully fixed empty tags

--- a/client/controlpanel/dashboard.html
+++ b/client/controlpanel/dashboard.html
@@ -101,7 +101,8 @@ function doWork() {
             <div id="sidebar" class="sidebar-offcanvas">
                 <br /> <br />
                 <div class="col-xs-12">
-                    <h3 style="color:#bcbcbc; text-align: center;" >Your Plants <a id="Leaf"><span class="glyphicon glyphicon-tree-conifer" style="color: #007a2a !important;"></span></a></h3><br/>
+                    <h3 style="color:#bcbcbc; text-align: center;" >Your Plants <a id="Leaf"><span class="glyphicon glyphicon-tree-conifer" style="color: #007a2a !important;"><!----></span></a></h3><br/>
+
                     <ul class="nav nav-pills nav-stacked">
                         <li><h4>Groups:</h4></li>
                         <li>
@@ -114,12 +115,13 @@ function doWork() {
 
                                             <!--Dank Weed-->
                                             <li><ul class="nav innerMenu"><li><button id="setting_cog" class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:13px;">
-                                                </button><a href="#">&nbsp;Dank Weed, 90%THC, strong stuff </a></li>
+                                             <!----></button><a href="#">&nbsp;Dank Weed, 90%THC, strong stuff&nbsp;</a></li>
                                             </ul></li>
 
                                             <!--Mystery Plant-->
                                             <li><ul class="nav innerMenu"><li>
-                                                <button data-toggle="collapse" class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:13px;"></button><a href="#">Mystery Plant</a></li>
+                                                <button data-toggle="collapse" class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:13px;">&nbsp;
+                                                  <!----></button><a href="#">Mystery Plant</a></li>
                                             </ul></li>
                                         </ul>
                                 </li>
@@ -132,28 +134,28 @@ function doWork() {
                         <!--This entire thing is just for the indoors dropdown-->
                         <li class="dropdown keep-open" id="menuElement">
 
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Scary Basement&nbsp;<span class="caret"></span></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Scary Basement&nbsp;<span class="caret"><!----></span></a>
 
                             <ul id="menuDrop" class="dropdown-menu keep-open" role="menu">
                                 <li>
                                     <ul class="nav innerMenu"><li><button class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:13px;">
-                                    </button><a href="#">&nbsp;Dead Twig</a></li></ul>
+                                    <!----></button><a href="#">&nbsp;Dead Twig</a></li></ul>
                                 </li>
 
                                 <li>
                                     <ul class="nav innerMenu"><li><button onclick="" class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:13px;">
-                                    </button><a href="#">Venus Flytrap</a></li></ul>
+                                    <!----></button><a href="#">Venus Flytrap</a></li></ul>
                                 </li>
                             </ul>
                         </li>
                         <li class="dropdown keep-open" id="menuElement">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Watered Sidewalks<span class="caret"></span></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Watered Sidewalks<span class="caret"><!----></span></a>
                             <ul id="menuDrop" class="dropdown-menu keep-open" role="menu">
                                 <!--Dank Weed-->
                                 <li>
                                     <ul class="nav innerMenu">
                                         <li>
-                                            <button id="cog1" class="sets glyphicon glyphicon-cog pull-right settings_cog" style="border:none;background-color:transparent;padding-top:13px;"></button>
+                                            <button id="cog1" class="sets glyphicon glyphicon-cog pull-right settings_cog" style="border:none;background-color:transparent;padding-top:13px;"><!----></button>
                                             <a href="#"> In front of cramer </a>
                                         </li>
 
@@ -168,7 +170,7 @@ function doWork() {
                                     <!--Mystery Plant-->
                                     <ul class="nav innerMenu">
                                         <li>
-                                            <button id="cog2" type="button" onclick="" class="sets glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:13px;"></button>
+                                            <button id="cog2" type="button" onclick="" class="sets glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:13px;"><!----></button>
                                             <a href="#">Library sidewalk</a>
                                         </li>
 
@@ -203,7 +205,7 @@ function doWork() {
                             </li>
 
                             <li style="font-size: 12px; float: right;"><br/><a href="allgroups.html">Manage Groups</a></li>
-                            <li class="plus" style="font-size: 13px; float: left;"><a onclick="showCreateGroup()"><span class="btn glyphicon glyphicon-plus"></span></a></li>
+                            <li class="plus" style="font-size: 13px; float: left;"><a onclick="showCreateGroup()"><span class="btn glyphicon glyphicon-plus"><!----></span></a></li>
                         </ul>
                         <!--End indoors dropdown-->
 
@@ -225,7 +227,7 @@ function doWork() {
                             <li><div id="plantListContainer"></div></li>
 
                             <li>
-                                <ul class="nav"><li><button onclick="location.href='http:/google.com/'" class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:13px;"></button><a href="broken.html"> Dank Weed, 90%THC, strong stuff </a></li></ul>
+                                <ul class="nav"><li><button onclick="location.href='http:/google.com/'" class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:13px;"><!----></button><a href="broken.html"> Dank Weed, 90%THC, strong stuff </a></li></ul>
                                 <br/>
                             </li>
 
