--- a/client/controlpanel/allplants.html
+++ b/client/controlpanel/allplants.html
@@ -4,44 +4,35 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="gMain.css>">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <link rel="stylesheet" type="text/css" href="css/gmain.css">
-
         <title>PlantPi: All your plants</title>
         <link rel="shortcut icon" href="https://d30y9cdsu7xlg0.cloudfront.net/png/3973-200.png" />
     </head>
     <body>
-        <script>
-            function getCookie(cname) {
-                var name = cname + "=";
-                var decodeCookie = decodeCookie.split(';');
-                for(var i = 0; i <ca.length; i++) {
-                    var c = ca[i];
-                            while (c.charAt(0) == ' ') {
-                                    c = c.substring(1);
-                        }
-                        if (c.indexOf(name) == 0) {
-                                return c.substring(name.length, c.length);
-                        }
-                        return "";
-                }
+        <script> //a little picky eh?
+var username = hex2a(getCookie("username"));
+function getCookie(name) {
+    var value = "; " + document.cookie;
+    var parts = value.split("; " + name + "=");
+    if (parts.length == 2)
+        return parts.pop().split(";").shift();
+    }
 
-                function hex2a(hexx) {
-                var hex = hexx.toString();
-                var str = '';
-                for (var i = 0; i < hex.length; i += 2)
-                    str += String.fromCharCode(parseInt(hex.substr(i, 2), 16));
-                    return str;
-            }
+function hex2a(hexx) {
+    var hex = hexx.toString();
+    var str = '';
+    for (var i = 0; i < hex.length; i += 2)
+        str += String.fromCharCode(parseInt(hex.substr(i, 2), 16));
+    return str;
+}
 
-            var username = hex2a(getCookie("username"));
-            var xhr = new XMLHttpRequest();
-            xhr.open("get", "/get-device" + username);
-            xhr.send();
-            //var plantname = JSON.parse(xhr.response)[0].name;
+var username = hex2a(getCookie("username"));
+var xhr = new XMLHttpRequest();
+xhr.open("get", "/get-device" + username);
+xhr.send();
         </script>
         <!--navbar-->
         <nav class="navbar navbar-inverse bg-inverse navbar-fixed-top">
@@ -76,23 +67,6 @@
                 </div>
             </div>
         </nav>
-        <script> //because i was bored EASTEREGG
-            var EasterEgg = document.getElementById("Easter");
-            var Leaf = document.getElementById("Leaf");
-            var xicon = document.getElementsByClassName("close")[0];
-
-            Leaf.onclick = function(){ //When leaf is clicked on
-                EasterEgg.style.display="block";
-             }
-            xicon.onclick = function() { //when "X" icon is clicked on
-                EasterEgg.style.display = "none";
-            }
-            window.onclick = function(event) { //Close window if user clicks outside the box
-                if (event.target == EasterEgg) {
-                    EasterEgg.style.display = "none";
-                }
-            }
-        </script>
         <!--End NavBar-->
 
         <br/><br/><br/><br/>
@@ -114,5 +88,22 @@
             <div id="expandedPlantContainer"></div>
         </div>
         <script src="dist/bundle.js"></script>
+        <script>
+var EasterEgg = document.getElementById("Easter");
+var Leaf = document.getElementById("Leaf");
+var xicon = document.getElementsByClassName("close")[0];
+
+Leaf.onclick = function(){ //When leaf is clicked on
+    EasterEgg.style.display="block";
+}
+xicon.onclick = function() { //when "X" icon is clicked on
+    EasterEgg.style.display = "none";
+}
+window.onclick = function(event) { //Close window if user clicks outside the box
+    if (event.target == EasterEgg) {
+        EasterEgg.style.display = "none";
+    }
+}
+        </script>
     </body>
 </html>
