--- a/client/controlpanel/settings.html
+++ b/client/controlpanel/settings.html
@@ -10,37 +10,30 @@
 		<link rel="stylesheet" type="text/css" href="css/settings.css">
 		<title>PlantPi: Settings</title>
 		<link rel="shortcut icon" href="https://d30y9cdsu7xlg0.cloudfront.net/png/3973-200.png" />
+        <script>
+var username = hex2a(getCookie("username"));
+function getCookie(name) {
+    var value = "; " + document.cookie;
+    var parts = value.split("; " + name + "=");
+    if (parts.length == 2)
+        return parts.pop().split(";").shift();
+    }
+
+function hex2a(hexx) {
+    var hex = hexx.toString();
+    var str = '';
+    for (var i = 0; i < hex.length; i += 2)
+        str += String.fromCharCode(parseInt(hex.substr(i, 2), 16));
+    return str;
+}
+//var username = hex2a(getCookie("username"));
+//var xhr = new XMLHttpRequest();
+//xhr.open("get", "/get-device" + username);
+//xhr.send();
+//var plantname = JSON.parse(xhr.response)[0].name;
+        </script>
 	</head>
 	<body>
-		<script>
-			function getCookie(cname) {
-				var name = cname + "=";
-				var decodeCookie = decodeCookie.split(';');
-				for(var i = 0; i <ca.length; i++) {
-					var c = ca[i];
-        					while (c.charAt(0) == ' ') {
-            						c = c.substring(1);
-        				}
-        				if (c.indexOf(name) == 0) {
-            					return c.substring(name.length, c.length);
-        				}
-        				return "";
-    			}
-
-    			function hex2a(hexx) {
- 				var hex = hexx.toString();
-				var str = '';
-				for (var i = 0; i < hex.length; i += 2)
-					str += String.fromCharCode(parseInt(hex.substr(i, 2), 16));
-    				return str;
-			}
-
-			//var username = hex2a(getCookie("username"));
-			//var xhr = new XMLHttpRequest();
-			//xhr.open("get", "/get-device" + username);
-			//xhr.send();
-			//var plantname = JSON.parse(xhr.response)[0].name;
-		</script>
 		<!--Begin NavBar-->
         <nav class="navbar navbar-inverse bg-inverse navbar-fixed-top">
             <div class="container-fluid">
@@ -75,22 +68,22 @@
             </div>
         </nav>
 		<script> //because i was bored EASTEREGG
-			var EasterEgg = document.getElementById("Easter");
-			var Leaf = document.getElementById("Leaf");
-			var xicon = document.getElementsByClassName("close")[0];
+var EasterEgg = document.getElementById("Easter");
+var Leaf = document.getElementById("Leaf");
+var xicon = document.getElementsByClassName("close")[0];
 
-			Leaf.onclick = function(){ //When leaf is clicked on
-			 	EasterEgg.style.display="block";
-			 }
-			xicon.onclick = function() { //when "X" icon is clicked on
-   				EasterEgg.style.display = "none";
-			}
-			window.onclick = function(event) { //Close window if user clicks outside the box
-				if (event.target == EasterEgg) {
-					EasterEgg.style.display = "none";
-				}
-			}
-		</script>
+Leaf.onclick = function(){ //When leaf is clicked on
+	EasterEgg.style.display="block";
+}
+xicon.onclick = function() { //when "X" icon is clicked on
+   	EasterEgg.style.display = "none";
+}
+window.onclick = function(event) { //Close window if user clicks outside the box
+	if (event.target == EasterEgg) {
+		EasterEgg.style.display = "none";
+	}
+}
+	   </script>
 		<!--End NavBar-->
 
 		<br/><br/><br/><br/>
