--- a/client/controlpanel/settings.html
+++ b/client/controlpanel/settings.html
@@ -10,67 +10,31 @@
 		<link rel="stylesheet" type="text/css" href="css/settings.css">
 		<title>PlantPi: Settings</title>
 		<link rel="shortcut icon" href="https://d30y9cdsu7xlg0.cloudfront.net/png/3973-200.png" />
+        <script>
+var username = hex2a(getCookie("username"));
+function getCookie(name) {
+    var value = "; " + document.cookie;
+    var parts = value.split("; " + name + "=");
+    if (parts.length == 2)
+        return parts.pop().split(";").shift();
+    }
+
+function hex2a(hexx) {
+    var hex = hexx.toString();
+    var str = '';
+    for (var i = 0; i < hex.length; i += 2)
+        str += String.fromCharCode(parseInt(hex.substr(i, 2), 16));
+    return str;
+}
+//var username = hex2a(getCookie("username"));
+//var xhr = new XMLHttpRequest();
+//xhr.open("get", "/get-device" + username);
+//xhr.send();
+//var plantname = JSON.parse(xhr.response)[0].name;
+        </script>
 	</head>
 	<body>
-		<script>
-			function getCookie(cname) {
-				var name = cname + "=";
-				var decodeCookie = decodeCookie.split(';');
-				for(var i = 0; i <ca.length; i++) {
-					var c = ca[i];
-        					while (c.charAt(0) == ' ') {
-            						c = c.substring(1);
-        				}
-        				if (c.indexOf(name) == 0) {
-            					return c.substring(name.length, c.length);
-        				}
-        				return "";
-                                }
-    			}
-
-    			function hex2a(hexx) {
- 				var hex = hexx.toString();
-				var str = '';
-				for (var i = 0; i < hex.length; i += 2)
-					str += String.fromCharCode(parseInt(hex.substr(i, 2), 16));
-    				return str;
-			}
-
-			//var username = hex2a(getCookie("username"));
-			//var xhr = new XMLHttpRequest();
-			//xhr.open("get", "/get-device" + username);
-			//xhr.send();
-			//var plantname = JSON.parse(xhr.response)[0].name;
-		</script>
 		<!--Begin NavBar-->
-<<<<<<< HEAD
-		<nav class="navbar navbar-inverse bg-inverse navbar-fixed-top">
-			<div class="container-fluid">
-	    			<div class="navbar-header">
-                                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#TheNavBar">
-					            	<span class="icon-bar">&nbsp;</span>
-					           	<span class="icon-bar">&nbsp;</span>
-					           	<span class="icon-bar">&nbsp;</span>
-				        </button>
-	     				<a class="navbar-brand" href="dashboard.html">PlantPi</a>
-	    			</div>
-
-	    			<!--Allow for better compatability when resizing-->
-	    			<div class="collapse navbar-collapse" id="TheNavBar">
-		    			<ul class="nav navbar-nav navbar-right">
-					        <li>
-                                                        <a href="dashboard.html">
-                                                                <span class="glyphicon glyphicon-arrow-left">&nbsp;</span> Go Back
-                                                        </a>
-                                                </li>
-					               <li><a href="index.html"><span class="glyphicon glyphicon-log-out">&nbsp;</span> Signout</a></li>
-					               <li><a id="Leaf"><span class="glyphicon glyphicon-leaf">&nbsp;</span></a></li>
-
-				 	</ul>
-				 </div>
-			</div>
-		</nav>
-=======
         <nav class="navbar navbar-inverse bg-inverse navbar-fixed-top">
             <div class="container-fluid">
                 <div class="navbar-header">
@@ -103,24 +67,23 @@
                 </div>
             </div>
         </nav>
->>>>>>> c0dd85c... big commit: fix navbar across pages, style settings from cogs, big dashboard code cleanup
 		<script> //because i was bored EASTEREGG
-			var EasterEgg = document.getElementById("Easter");
-			var Leaf = document.getElementById("Leaf");
-			var xicon = document.getElementsByClassName("close")[0];
+var EasterEgg = document.getElementById("Easter");
+var Leaf = document.getElementById("Leaf");
+var xicon = document.getElementsByClassName("close")[0];
 
-			Leaf.onclick = function(){ //When leaf is clicked on
-			 	EasterEgg.style.display="block";
-			 }
-			xicon.onclick = function() { //when "X" icon is clicked on
-   				EasterEgg.style.display = "none";
-			}
-			window.onclick = function(event) { //Close window if user clicks outside the box
-				if (event.target == EasterEgg) {
-					EasterEgg.style.display = "none";
-				}
-			}
-		</script>
+Leaf.onclick = function(){ //When leaf is clicked on
+	EasterEgg.style.display="block";
+}
+xicon.onclick = function() { //when "X" icon is clicked on
+   	EasterEgg.style.display = "none";
+}
+window.onclick = function(event) { //Close window if user clicks outside the box
+	if (event.target == EasterEgg) {
+		EasterEgg.style.display = "none";
+	}
+}
+	   </script>
 		<!--End NavBar-->
 
 		<br/><br/><br/><br/>
@@ -128,11 +91,7 @@
 		<!--The settings container, currently doesnt do anything other than show forms
 		and send a confirm alert upon button press-->
 		<div class="container">
-<<<<<<< HEAD
-			<h1><span class="glyphicon glyphicon-cog">&nbsp;</span>  Settings for <strong>"Maple"</strong></h1>
-=======
 			<h1><span class="glyphicon glyphicon-cog"></span>&nbsp;General Settings</h1>
->>>>>>> c0dd85c... big commit: fix navbar across pages, style settings from cogs, big dashboard code cleanup
 			<p>Here you can change various settings for your PlantPi environment.</p>
 			<div class="container">
 				<br/>
@@ -149,7 +108,7 @@
 						    	<label for="Pi_Device_ID">PlantPi Device ID</label>
 						    	<input type="text" class="form-control" id="Pi_Device_ID" name="device" placeholder="A113">
 						</div>
-						<button type="submit" class="btn btn-primary" onclick="confirm_mes()">Save Settings</button>
+						<button id="savebutton" type="submit" class="btn btn-primary" onclick="confirm_mes()">Save Settings</button>
 
 						<br/>
 					</div>
@@ -185,13 +144,8 @@
 						    	<label for="verify_password">Verify Password</label>
 						    	<input type="text" class="form-control" id="verify_password" placeholder="">
 						</div>
-<<<<<<< HEAD
-						<button type="submit" class="btn btn-primary" onclick="confirm_mes()">Save Settings</button><br/>
-					</div>	
-=======
 						<button id="savebutton" type="submit" class="btn btn-primary" onclick="confirm_mes()">Save Settings</button><br/>
 					</div>
->>>>>>> c0dd85c... big commit: fix navbar across pages, style settings from cogs, big dashboard code cleanup
 				</form>
 				<br/>
 			</div>
