--- a/client/controlpanel/signin.html
+++ b/client/controlpanel/signin.html
@@ -1,5 +1,8 @@
+<!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
+    <title>signin</title>
+  </head>
   <body>
     <div class = "login-container">
       <form action="/login" method="post">
