--- a/client/controlpanel/signup.html
+++ b/client/controlpanel/signup.html
@@ -1,5 +1,8 @@
+<!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
+    <title>signup</title>
+  </head>
   <body>
     <script>
 window.fbAsyncInit = function() {
