make the linter run before the build phase

--- a/client/controlpanel/settings.html
+++ b/client/controlpanel/settings.html
@@ -110,7 +110,7 @@
 						    	<label for="Pi_Device_ID">PlantPi Device ID</label>
 						    	<input type="text" class="form-control" id="Pi_Device_ID" name="device" placeholder="A113">
 						</div>
-						<button id="savebutton" type="submit" class="btn btn-primary" onclick="confirm_mes()">Save Settings</button>
+						<button type="submit" class="btn btn-primary" onclick="confirm_mes()">Save Settings</button>
 
 						<!--currently doesn't do anything-->
 						<div id="confirm_txt" class="confirm_text">
@@ -138,7 +138,7 @@
 						    	<label for="verify_password">Verify Password</label>
 						    	<input type="text" class="form-control" id="verify_password" placeholder="">
 						</div>
-						<button id="savebutton" type="submit" class="btn btn-primary" onclick="confirm_mes()">Save Settings</button><br/>
+						<button type="submit" class="btn btn-primary" onclick="confirm_mes()">Save Settings</button><br/>
 					</div>	
 				</form>
 				<br/>
