--- a/client/controlpanel/groupSettings.html
+++ b/client/controlpanel/groupSettings.html
@@ -16,21 +16,21 @@
     <nav class="navbar navbar-inverse bg-inverse navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
-                <button class="navbar-toggle collapsed" data-target="#TheNavBar" data-toggle="collapse" type="button"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button> <a class="navbar-brand" href="dashboard.html">PlantPi</a>
+                <button class="navbar-toggle collapsed" data-target="#TheNavBar" data-toggle="collapse" type="button"><span class="icon-bar">&nbsp;</span> <span class="icon-bar"></span> <span class="icon-bar"></span></button> <a class="navbar-brand" href="dashboard.html">PlantPi</a>
             </div><!--Allow for better compatability when resizing-->
             <div class="collapse navbar-collapse" id="TheNavBar">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a><span class="glyphicon glyphicon-user" id="usernameRenderTarget"></span></a>
+                        <a><span class="glyphicon glyphicon-user" id="usernameRenderTarget">&nbsp;</span></a>
                     </li>
                     <li>
-                        <a href="dashboard.html"><span class="glyphicon glyphicon-arrow-left"></span> Go Back</a>
+                        <a href="dashboard.html"><span class="glyphicon glyphicon-arrow-left">&nbsp;</span>Go Back</a>
                     </li>
                     <li>
-                        <a href="index.html"><span class="glyphicon glyphicon-log-out"></span> Signout</a>
+                        <a href="index.html"><span class="glyphicon glyphicon-log-out">&nbsp;</span>Signout</a>
                     </li>
                     <li>
-                        <a id="Leaf"><span class="glyphicon glyphicon-leaf"></span></a>
+                        <a id="Leaf"><span class="glyphicon glyphicon-leaf">&nbsp;</span></a>
                     </li>
                 </ul>
             </div>
@@ -41,26 +41,23 @@
     <br>
     <br>
     <div class="container">
-        <h1><span class="glyphicon glyphicon-cog"></span> Group Settings for <strong id=renderGroupName></strong></h1>
+        <h1><span class="glyphicon glyphicon-cog">&nbsp;</span>Group Settings for <strong id=renderGroupName></strong></h1>
         <div id="dynamicGroupName" style="display:inline">
             <h1></h1>
         </div>
 
         <div class="container">
-            <strong><br></strong>
+            <br />
             <form action="/endpoint" id="pi_info" method="post" name="pi_info">
-                <strong></strong>
                 <div class="subsection">
-                    <strong></strong>
                     <p><strong>Group Infomation</strong></p>
                 </div>
                 <div class="subform">
-                    <strong></strong>
                     <div class="form-group" id="renderRenameForm">
 
                     </div>
                 </div>
-            </form><br>
+            </form><br />
             <div class="subsection">
                 <p>Modify Group Member Plants</p>
             </div>
@@ -74,7 +71,7 @@
                         </div>
                         <div>
                             <ul class="list-group" id="rmPlantsGroups">
-                                <li class="list-group-item" data-target="#group1" data-toggle="collapse">Group 1 <span class="caret"></span>
+                                <li class="list-group-item" data-target="#group1" data-toggle="collapse">Group 1 <span class="caret">&nbsp;</span>
                                     <div class="collapse" id="group1">
                                         <ul class="list-group" id="group1">
                                             <li class="list-group-item"><button class="btn btn-success glyphicon glyphicon-plus"></button> Plant 1</li>
@@ -83,20 +80,20 @@
                                         </ul>
                                     </div>
                                 </li>
-                                <li class="list-group-item" data-target="#group2" data-toggle="collapse">Group 2 <span class="caret"></span>
+                                <li class="list-group-item" data-target="#group2" data-toggle="collapse">Group 2 <span class="caret">&#8203;</span>
                                     <div class="collapse" id="group2">
                                         <ul class="list-group" id="group2">
-                                            <li class="list-group-item"><button class="btn btn-success glyphicon glyphicon-plus"></button> Plant 12</li>
-                                            <li class="list-group-item"><button class="btn btn-success glyphicon glyphicon-plus"></button> Plant 34</li>
-                                            <li class="list-group-item"><button class="btn btn-success glyphicon glyphicon-plus"></button> Plant 45</li>
-                                            <li class="list-group-item"><button class="btn btn-success glyphicon glyphicon-plus"></button> Plant 56</li>
+                                            <li class="list-group-item"><button class="btn btn-success glyphicon glyphicon-plus">&#8203;</button> Plant 12</li>
+                                            <li class="list-group-item"><button class="btn btn-success glyphicon glyphicon-plus">&#8203;</button> Plant 34</li>
+                                            <li class="list-group-item"><button class="btn btn-success glyphicon glyphicon-plus">&#8203;</button> Plant 45</li>
+                                            <li class="list-group-item"><button class="btn btn-success glyphicon glyphicon-plus">&#8203;</button> Plant 56</li>
                                         </ul>
                                     </div>
                                 </li>
                                 <li style="list-style: none; display: inline">
                                     <div>
-                                        <li class="list-group-item"><button class="btn btn-success glyphicon glyphicon-plus"></button> Plant 8</li>
-                                        <li class="list-group-item"><button class="btn btn-success glyphicon glyphicon-plus"></button> Plant 9</li>
+                                        <li class="list-group-item"><button class="btn btn-success glyphicon glyphicon-plus">&#8203;</button> Plant 8</li>
+                                        <li class="list-group-item"><button class="btn btn-success glyphicon glyphicon-plus">&#8203;</button> Plant 9</li>
                                     </div>
                                 </li>
                             </ul>
@@ -108,9 +105,9 @@
                         </div>
                         <div>
                             <ul class="list-group" id="rmPlantsGroups">
-                                <li class="list-group-item"><button class="btn btn-danger glyphicon glyphicon-remove"></button> Plant A</li>
-                                <li class="list-group-item"><button class="btn btn-danger glyphicon glyphicon-remove"></button> Plant B</li>
-                                <li class="list-group-item"><button class="btn btn-danger glyphicon glyphicon-remove"></button> Plant C</li>
+                                <li class="list-group-item"><button class="btn btn-danger glyphicon glyphicon-remove">&#8203;</button> Plant A</li>
+                                <li class="list-group-item"><button class="btn btn-danger glyphicon glyphicon-remove">&#8203;</button> Plant B</li>
+                                <li class="list-group-item"><button class="btn btn-danger glyphicon glyphicon-remove">&#8203;</button> Plant C</li>
                             </ul>
                         </div>
                     </div>
@@ -138,7 +135,7 @@
                         <div class="modal-footer">
                             <form action="/delete-group" method="post">
                                 <button class="btn btn-secondary" data-dismiss="modal" type="button">Cancel</button>
-                                <span id="renderDelete">
+                                <span id="renderDelete">&#8203;
                                 </span>
                             </form>
                         </div>
